# reliability-aware-turkish-legal-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: .gitkeep  app.jsx  data.jsx  index.html  styles.css  tweaks-panel.jsx
configs/: .gitkeep  default.yaml  highquality.yaml
data/curated/: legal_sources.jsonl
data/evaluation/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/ethics/: .gitkeep  disclaimer.md
docs/original_materials/: CS455_555_Project_Announcement.docx  CS455_555_Proposal_Template.docx  CS455_Proposal_Sonmez_Sozer_Erseker.docx
docs/reports/: .gitkeep  final_report.md
evaluation/annotations/: .gitkeep  RUBRIC.md  manual_eval.jsonl
evaluation/results/: .gitkeep
gpu_results/data_processed/: heldout.jsonl  preprocessing_report.md
gpu_results/evaluation_results/: ablation_rerank_combined.json  ablation_topk.json  debug_dog.txt  retrieval_combined_diagnostics.json  retrieval_manual_v3.json  retrieval_metrics.json  verifier_manual_metrics.json  verifier_manual_metrics_AFTER.json  (+2 more)
notebooks/: 01_data_exploration_preprocessing.ipynb  02_retrieval_baseline.ipynb  03_generation_verifier_smoke_test.ipynb
scripts/: .gitkeep  build_index.py  debug_retrieval.py  run_eval.py  scrape_mevzuat.py  serve.py
tests/: conftest.py  test_eval_set.py  test_faiss_roundtrip.py  test_generation_client.py  test_model_runtime.py  test_passages.py  test_pipeline_reliability.py  test_prompts_and_format.py  test_retrieval_expansion.py  test_retrieval_metrics.py  test_statutes.py  test_verifier_logic.py
(+41 files in other folders)
